PDF Viewer: Disable panning code on Windows.

Windows can already perform panning natively.

BUG=829791

Change-Id: I1607e85645cba201d12c415f203531459c838442
Reviewed-on: https://chromium-review.googlesource.com/1000833
Reviewed-by: Henrique Nakashima <hnakashima@chromium.org>
Commit-Queue: Lei Zhang <thestig@chromium.org>
Cr-Commit-Position: refs/heads/master@{#549082}
Former-commit-id: 50b9ff0982de02c4e82c658197cd645b45ef71aa